Website Finished, moving to 11ty

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Earth</h1>
-    <p>Placeholder</p>
-    <div>
-        <img src="images/EarthActive.png"></img>
-        <img src="images/Moon.png"></img>
+    <p>Our home, the only planet we know of that can truly sustain humans. This planet is filled with lush greanery, blue oceans and skys, and many types of life. It orbits around the Sun</p>
+    <div class="flex-container">
+        <div><img src="images/EarthActive.png"></img></div>
+        <div><a href="Moon.html"><img src="images/Moon.png"></img></a></div>
     </div>
 </body>
 </html>
