--- a/moon.html
+++ b/moon.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Moon</h1>
-    <p>Placeholder</p>
-    <div>
-        <img src="images/Earth.png"></img>
-        <img src="images/MoonActive.png"></img>
+    <p>A cold moon that orbits the earth and reflects sunlight onto it, lighting up the night. It also affects the tides of the oceans. Japan has a legend that there is a rabbit making Mochi on the moon</p>
+    <div class="flex-container">
+        <div><a href="index.html"><img src="images/Earth.png"></img></a></div>
+        <div><img src="images/MoonActive.png"></img></div>
     </div>
 </body>
 </html>
