--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Earth</title>
 </head>
@@ -10,8 +10,8 @@
     <h1>Earth</h1>
     <p>Our home, the only planet we know of that can truly sustain humans. This planet is filled with lush greanery, blue oceans and skys, and many types of life. It orbits around the Sun</p>
     <div class="flex-container">
-        <div><img src="images/EarthActive.png"></img></div>
-        <div><a href="Moon.html"><img src="images/Moon.png"></img></a></div>
+        <div><img alt="Earth" src="images/EarthActive.png"></img></div>
+        <div><a href="Moon.html"><img alt="Moon" src="images/Moon.png"></img></a></div>
     </div>
 </body>
 </html>
