--- a/moon.html
+++ b/moon.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Moon</title>
 </head>
@@ -10,8 +10,8 @@
     <h1>Moon</h1>
     <p>A cold moon that orbits the earth and reflects sunlight onto it, lighting up the night. It also affects the tides of the oceans. Japan has a legend that there is a rabbit making Mochi on the moon</p>
     <div class="flex-container">
-        <div><a href="index.html"><img src="images/Earth.png"></img></a></div>
-        <div><img src="images/MoonActive.png"></img></div>
+        <div><a href="index.html"><img alt="Earth" src="images/Earth.png"></img></a></div>
+        <div><img alt="Moon" src="images/MoonActive.png"></img></div>
     </div>
 </body>
 </html>
