--- a/moon.html
+++ b/moon.html
@@ -10,8 +10,8 @@
     <h1>Moon</h1>
     <p>A cold moon that orbits the earth and reflects sunlight onto it, lighting up the night. It also affects the tides of the oceans. Japan has a legend that there is a rabbit making Mochi on the moon</p>
     <div class="flex-container">
-        <div><a href="index.html"><img alt="Earth" src="images/Earth.png"></img></a></div>
-        <div><img alt="Moon" src="images/MoonActive.png"></img></div>
+        <div><a href="index.html"><img alt="Earth" src="images/Earth.png"></a></div>
+        <div><img alt="Moon" src="images/MoonActive.png"></div>
     </div>
 </body>
 </html>
